# disputable-values-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  devshell.toml  disputer-config copy.yaml  disputer-config.yaml  flake.nix  hardhat.config.js  monitored-chains.example  monitored-chains.json  package-lock.json  pyproject.toml  requirements.txt  setup.sh  shell.nix  vars.example.sh  with-nix.md
.github/workflows/: py39.yml  release.yml  style.yml  typing.yml
.streamlit/: config.toml
contracts/: TellorFlex360.sol
contracts/interfaces/: IERC20.sol
src/disputable_values_monitor/: __init__.py  cli.py  config.py  data.py  discord.py  disputer.py  utils.py
src/tellor_disputables/: __init__.py  alerts.py  api.py  api_table.py  cli.py  config.py  dashboard.py  data.py  discord.py  disputer.py  utils.py
tellor_disputables/: __init__.py  alert.py  alerts.py  dashboard.py  data.py  isdisputable_test.py  utils.py
tests/: __init__.py  conftest.py  test_alerts.py  test_auto_dispute_multiple_ids.py  test_config.py  test_contracts_import.py  test_data.py  test_demo.py  test_discord.py  test_disputer.py  test_mimicry_dispute.py  test_utils.py
