[tool.poetry]
name = "disputable-values-monitor"
version = "2.0.4"
description = "dashboard & alerts for disputable values reported to Tellor oracles"
authors = ["Tellor Development Community"]
license = "MIT"
packages = [{ include = "disputable_values_monitor", from = "src" }]
include = ["vars.example.sh", "README.md", "disputer-config.yaml"]

[tool.poetry.dependencies]
python = ">3.9,<4"
discordwebhook = "^1.0.3"
pandas = "^1.5.3"
tabulate = "^0.8.10"
pytest-asyncio = "^0.19.0"
click = "^8.1.3"
pydantic = "^1.10.17"
python-box = "^7.2.0"
telliot-feeds = { git = "https://github.com/tellor-io/telliot-feeds.git", branch = "update-deps-and-fix-tests" }
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^22.12.0"
pre-commit = "^2.21.0"
mypy = "^0.942"
types-python-dateutil = "^2.9.0.20240316"
types-PyYAML = "6.0.12.20240724"
py-solc-x = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "disputable_values_monitor.cli:main"
data = "disputable_values_monitor.data:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
